fix: Remove custom classList property in tile & vector layers
Custom classList on layers may incur performance loss on mobile devices

--- a/changelog/v0.9.0.md
+++ b/changelog/v0.9.0.md
@@ -6,7 +6,7 @@ will lead this project to the long-awaited stable release version of v1.0.0.
 
 ## List of all changes
 
--e  * [#47](https://github.com/helloelliote/webgis/pull/47) - feature: Setup layers 'BML_BADM_AS','BML_HADM_AS' and 'GEO_LINE_AS' ([@helloelliote](https://github.com/helloelliote))
+ * [#47](https://github.com/helloelliote/webgis/pull/47) - feature: Setup layers 'BML_BADM_AS','BML_HADM_AS' and 'GEO_LINE_AS' ([@helloelliote](https://github.com/helloelliote))
  * [#46](https://github.com/helloelliote/webgis/pull/46) - refactor: If-else statements & ForEach & null check ([@helloelliote](https://github.com/helloelliote))
  * [#45](https://github.com/helloelliote/webgis/pull/45) - fix: Stop table column search from getting disabled when toggling map ([@helloelliote](https://github.com/helloelliote))
  * [#44](https://github.com/helloelliote/webgis/pull/44) - fix: Fix service register & search bugs ([@helloelliote](https://github.com/helloelliote))
@@ -51,7 +51,7 @@ will lead this project to the long-awaited stable release version of v1.0.0.
 <details>
   <summary>Dependency Updates</summary>
 
--e  * [#42](https://github.com/helloelliote/webgis/pull/42) - chore(deps): bump ini from 1.3.5 to 1.3.8 in /tools ([@helloelliote](https://github.com/helloelliote))
+ * [#42](https://github.com/helloelliote/webgis/pull/42) - chore(deps): bump ini from 1.3.5 to 1.3.8 in /tools ([@helloelliote](https://github.com/helloelliote))
  * [#6](https://github.com/helloelliote/webgis/pull/6) - build(deps): bump jquery from 3.4.1 to 3.5.0 in /tools ([@helloelliote](https://github.com/helloelliote))
  * [#5](https://github.com/helloelliote/webgis/pull/5) - build(deps): bump handlebars from 4.1.0 to 4.3.0 in /tools ([@helloelliote](https://github.com/helloelliote))
 
